@@ -1,13 +1,15 @@
-MD5 92a618fe312675cba9e02d4bd4778bc8 ChangeLog 1286
-MD5 127e3fe84800e0a2a182b6a576388a28 mplayer-sh-0.0.7.ebuild 961
-MD5 836f18ef5adfc87d22b6152e0745235a mplayer-sh-0.8.0.ebuild 1054
-MD5 269f06fa541b1f8b03a112ecccfb00d2 mplayer-sh-0.8.1.ebuild 1139
-MD5 a35e97b8ab0cf41e9873a4a75417b770 mplayer-sh-0.8.2.ebuild 1139
-MD5 f55a388ec15466059c8ac2b6cb9c3737 mplayer-sh-0.8.3.ebuild 1154
-MD5 ab76d4c377d9c33c66008413efcd30f4 mplayer-sh-0.8.4.ebuild 1154
+MD5 9ce4a0fc92e8814a2a995033897b39ff ChangeLog 1560
+MD5 15ae011b9a26edea0c3804aa6fa57aff mplayer-sh-0.0.7.ebuild 969
+MD5 e50228a8a94d62bea9b0d4e6e90f33ef mplayer-sh-0.8.0.ebuild 1062
+MD5 50c695f97e6b3deca67f2e0ed6151228 mplayer-sh-0.8.1.ebuild 1147
+MD5 c1a52da1d640e8cffb1811bbc99d5bfd mplayer-sh-0.8.2.ebuild 1147
+MD5 829a406c87d4195f52e480c851f7274a mplayer-sh-0.8.3.ebuild 1158
+MD5 2eabbba137be91bfff16d6d6b6417234 mplayer-sh-0.8.4.ebuild 1155
+MD5 2eabbba137be91bfff16d6d6b6417234 mplayer-sh-0.8.5.ebuild 1155
 MD5 fe25a7a155e28bf1883c3921f05fa3a8 files/digest-mplayer-sh-0.0.7 64
 MD5 7607d016cae6aa1cd992177b2bb550d6 files/digest-mplayer-sh-0.8.0 66
 MD5 094bda9fc0297c5a45d489e373171fa2 files/digest-mplayer-sh-0.8.1 66
 MD5 04a95fa755be17830ea9412f52cd413d files/digest-mplayer-sh-0.8.2 66
 MD5 6fd95833c1c5527910ef54231ae1e4b1 files/digest-mplayer-sh-0.8.3 66
 MD5 57d94595192fe02edbaedcd170651924 files/digest-mplayer-sh-0.8.4 66
+MD5 1a07334db9a0f9a58b325f998499d889 files/digest-mplayer-sh-0.8.5 66
